Added Bootstrap and customizations

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,8 +1,21 @@
-$body-bg: 			#ecf0f1;
-$navbar-inverse-bg:		#27ae60;
-$navbar-inverse-link-color:		#ecf0f1;
-$brand-primary:		#e67e22;
-$jumbotron-bg:		#f1c40f;
+@import url(http://fonts.googleapis.com/css?family=Lato:400,700);
+
+
+$body-bg: 			      				#ecf0f1;
+$font-family-sans-serif:			'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$navbar-height:								45px;
+$navbar-default-bg:						white;
+$navbar-default-brand-color:	#f39c12;
+$brand-primary:								#f39c12;
+$jumbotron-bg:								white;
 
 
 @import 'bootstrap';
+
+.center {
+	text-align: center;
+}
+
+.navbar-brand {
+	font-weight: bold;
+}
