--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -6,6 +6,7 @@
   <thead>
     <tr>
       <th>Description</th>
+      <th>User</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,14 +15,21 @@
     <% @pins.each do |pin| %>
       <tr>
         <td><%= pin.description %></td>
+        <td><%= pin.user.email if pin.user %></td>
         <td><%= link_to 'Show', pin %></td>
-        <td><%= link_to 'Edit', edit_pin_path(pin) %></td>
-        <td><%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
+        <% if pin.user == current_User %>
+
+          <td><%= link_to 'Edit', edit_pin_path(pin) %></td>
+          <td><%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
+
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Plate', new_pin_path %>
+<% if User_signed_in? %>
+  <%= link_to 'New Plate', new_pin_path %>
+<% end %>
