--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,7 +19,11 @@
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "About", about_path %></li>
         <% if User_signed_in? %>
-          <li><%= link_to 'New Plate', new_pin_path %></li>
+           <li>
+            <%= link_to new_pin_path do %>
+              <span class="glyphicon glyphicon-plus"></span> New Plate
+            <% end %>
+          </li>
           <li><%= link_to "Account Settings", edit_User_registration_path %></li>
           <li><%= link_to "Log out", destroy_User_session_path, method: :delete %></li>
           <% else %>
