--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 	
 <% if User_signed_in? %>
     			
-  <div class="container">
+  <div class="center">
   	<button type="button" class="btn btn-default">
       
           <%= link_to new_pin_path do %>
